# zephyr-fpc

./: CMakeLists.txt  make  prj.conf
fingerprint_tac/: CMakeLists.txt
fingerprint_tac/normal/inc/: fpc_reset_device.h
fingerprint_tac/normal/platform/zephyr/inc/: fpc_tee_test.h
fingerprint_tac/normal/platform/zephyr/src/: fpc_tee_test.c  fpc_zephyr_tac.c
fingerprint_tac/normal/platform/zephyr/src/hw_auth/: fpc_tee_hw_auth.c
fingerprint_tac/normal/src/: fpc_sysfs.c  fpc_tee.c
fingerprint_tac/normal/src/hw_auth/: fpc_tee_hw_auth.c
fingerprint_tac/normal/src/kpi/: fpc_tee_kpi.c
fingerprint_tac/normal/src/test/: fpc_tee_db_blob_test.c
heci/: CMakeLists.txt  heci.c  heci.h
heci/inc/: heci_bridge.h  heci_host.h
heci/src/: heci.c  heci_bridge.c  heci_host.c
kernel/: fpc_heci.c
lib/: CMakeLists.txt
lib/src/: fpc_algo.c  fpc_algo_force.c  fpc_build_info.c  fpc_external.c  fpc_otp.c  fpc_sensor.c  fpc_sensor_force.c  fpc_sensor_pn.c
src/interface/: fpc_types.h
src/secure/inc/: fpc_log.h  fpc_mem.h
src/secure/lib/src/: CMakeLists.txt  fpc_algo.c  fpc_build_info.c  fpc_crypto.c  fpc_external.c  fpc_hw_auth.c  fpc_image_storage.c  fpc_kpi.c  fpc_mem.c  fpc_test.c
src/secure/platform/zephyr/: CMakeLists.txt  app_main.c  main.c
src/secure/platform/zephyr/inc/: app_ipc.h  app_main.h  fpc_service.h
src/secure/platform/zephyr/src/: app_ipc.c  app_main.c  fpc_crypto.c  fpc_service.c  fpc_utils.c
src/secure/platform/zephyr/src/hw_auth/: fpc_ta_hw_auth_tos.c
src/secure/src/: fpc_db.c  fpc_mem.c  fpc_ta_bio.c  fpc_ta_common.c  fpc_ta_pn.c  fpc_ta_router.c  fpc_ta_sensor.c
src/secure/src/db_blob/: fpc_ta_db_blob.c
src/secure/src/fs/: fpc_ta_fs.c
src/secure/src/hw_auth/: fpc_ta_hw_auth.c
